--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -18,23 +18,23 @@
 
                 <ul>
                     <li>
-                        <img src="images\clock.png" alt="Imagem do relogio" id="icone_relogio">
+                        <img src="images\clock.png" alt="Imagem do relogio" class="icones">
                         <h4 class="fonte"> <span id="tempo">00:00:00</span></h4>
                     </li>
                     <li>
-                        <img src="images\nave.png" alt="imagem da nave" id="icone_nave">
+                        <img src="images\nave.png" alt="imagem da nave" class="icones">
                         <h4 class="fonte">Life: <span id="vida">3</span> </h4>
                         
                     </li>
                     <li>
-                        <img src="images\alien.png" alt="Imagem do alien" id="icone_alien">
+                        <img src="images\alien.png" alt="Imagem do alien" class="icones">
                         <h4 class="fonte"> Alien: <span id="inimigo">3</span></h4>
                     </li>
                 </ul>
             </div>
 
             <div id="nave">
-                <img src="images\nave.png" alt="Imagem da Nave " id="nave">
+                <img src="images\nave.png" alt="Imagem da Nave " id="icone_nave">
             </div>
 
         </div>
