feat: o pause está funcionando

--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
                 </ul>
             </div>
 
+            <div >
+                <button onclick="togglePause()">
+                    <img src="images\pause.png" alt="botao de pause" id="pause">
+                </button>
+
+            </div>
+
             <div id="nave">
                 <img src="images\nave.png" alt="Imagem da Nave " id="icone_nave">
+                <img src="images/missil.png" id="icone_missil" style="display:none;">
+
             </div>
 
         </div>
